# codex-sdk

./: AGENTS.md  NOTICE  README.md  pyproject.toml
src/codex_sdk/: __init__.py  codex.py  events.py  exec.py  items.py  options.py  output_schema_file.py  thread.py
tests/: test_exec_env.py  test_options.py  test_output_schema.py  test_thread.py
