[project]
name = "codex-sdk"
version = "0.1.0"
description = "Python SDK for the Codex CLI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "hongzio", email = "11085613+hongzio@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ty.src]
exclude = ["codex/**"]

[tool.ruff]
exclude = ["codex/**"]
